# Snek

./: Makefile  ToDo
Inc/: Engine.hpp  Food.hpp  Snake.hpp  Snek.hpp  food.hpp  libs.hpp
Src/: Engine.cpp  Main.cpp  Snek.cpp  food.cpp  libs.cpp  main.cpp  song.txt
ncurses/: Makefile  ncurses.cpp  ncurses.hpp
sdl/: Makefile  sdl.cpp  sdl.hpp
sdl2/: Makefile  sdl2.cpp
sfml/: Makefile  sfml.cpp  sfml.hpp
trial/: CMakeLists.txt  Makefile  main.cpp
trial/cmake_modules/: FindSFML.cmake
